--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "private": true,
   "dependencies": {
+    "fp-block": "0.0.3",
+    "keyboard-handler": "^2.0.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8"
