--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.csslintrc
+.ctrlp
+.eslintrc
+.framework.md
+.tern-project
+.tetris.vimprojects
+tsconfig.json
