--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "game",
     "javascript"
   ],
-  "author": "<frontend.wordpress@gmail.com>",
+  "author": "<autoscripts@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/afrontend/fp-block-game/issues"
@@ -23,9 +23,9 @@
   "dependencies": {
     "fp-block": "0.0.10",
     "keyboard-handler": "^2.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
