--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "homepage": "/fp-block-game",
   "keywords": [
     "game",
-    "javascript"
+    "typescript",
+    "react"
   ],
   "author": "<autoscripts@gmail.com>",
   "license": "MIT",
@@ -18,14 +19,14 @@
   },
   "private": true,
   "dependencies": {
-    "fp-block": "0.0.12",
-    "keyboard-handler": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "fp-block": "^0.0.8",
+    "keyboard-handler": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -55,6 +56,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "gh-pages": "^6.3.0",
+    "typescript": "^5.9.2"
   }
 }
